if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
    message(FATAL_ERROR "Only out of source builds are supported.")
endif()
cmake_minimum_required(VERSION 3.4)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_executable(dynprof dynprof.cc main.cc)
set_property(TARGET dynprof PROPERTY CXX_STANDARD 14)
find_library(DYNINSTAPI_LIBRARY dyninstAPI)
target_link_libraries(dynprof ${DYNINSTAPI_LIBRARY})
