if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
    message(FATAL_ERROR "Only out of source builds are supported.")
endif()
cmake_minimum_required(VERSION 3.4)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_library(libdynprof SHARED libdynprof.cc)
add_executable(dynprof dynprof.cc main.cc)
add_executable(display display.cc)
set_property(TARGET dynprof PROPERTY CXX_STANDARD 11)
set_property(TARGET display PROPERTY CXX_STANDARD 11)
set_property(TARGET libdynprof PROPERTY CXX_STANDARD 11)
add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
find_library(DYNINSTAPI_LIBRARY dyninstAPI)
find_library(SYMTABAPI_LIBRARY symtabAPI)
target_link_libraries(dynprof ${DYNINSTAPI_LIBRARY} ${SYMTABAPI_LIBRARY})
